--- a/src/platform/BUILD.gn
+++ b/src/platform/BUILD.gn
@@ -30,7 +30,7 @@ if (chip_enable_openthread) {
   }
 }
 
-if (chip_device_platform == "linux" && chip_mdns != "none") {
+if (chip_device_platform == "linux" && chip_mdns == "platform") {
   pkg_config("avahi_client_config") {
     packages = [ "avahi-client" ]
   }
