--- a/.github/workflows/darwin.yaml
+++ b/.github/workflows/darwin.yaml
@@ -91,10 +91,10 @@ jobs:
             - name: Clean Build
               run: xcodebuild clean
               working-directory: src/darwin/Framework
-            - name: Build example chip-tool-darwin
+            - name: Build example darwin-framework-tool
               timeout-minutes: 15
               run: |
-                  scripts/examples/gn_build_example.sh examples/chip-tool-darwin out/debug chip_config_network_layer_ble=false is_asan=true
+                  scripts/examples/gn_build_example.sh examples/darwin-framework-tool out/debug chip_config_network_layer_ble=false is_asan=true
             - name: Build example All Clusters Server
               timeout-minutes: 15
               run: |
