--- a/BUILD.gn
+++ b/BUILD.gn
@@ -215,7 +215,7 @@ if (current_toolchain != "${dir_pw_toolchain}/default:default") {
     enable_standalone_chip_tool_build =
         enable_default_builds && host_os != "win"
 
-    # Build the chip-tool-darwin example.
+    # Build the darwin-framework-tool example.
     enable_standalone_chip_tool_darwin_build =
         enable_default_builds && host_os == "mac"
 
@@ -345,8 +345,9 @@ if (current_toolchain != "${dir_pw_toolchain}/default:default") {
 
   if (enable_standalone_chip_tool_darwin_build) {
     group("standalone_chip_tool_darwin") {
-      deps =
-          [ "${chip_root}/examples/chip-tool-darwin(${standalone_toolchain})" ]
+      deps = [
+        "${chip_root}/examples/darwin-framework-tool(${standalone_toolchain})",
+      ]
     }
   }
 
