Test modified may 24 (#18798)
* Modified tests
TC-BOOL-2.1
TC-FLW-2.2
TC-MC-1.5
TC-MC-1.7
TC-MC-3.2
TC-MC-3.4
TC-OCC-2.1
TC-PCC-2.1
TC-PS-1.1
TC-RH-2.2
TC-SC-4.2
TC-SWTCH-2.1
TC-SWTCH-2.2
TC-TM-2.2
TC-TSTAT-2.2
TC-WNCV-2.4
TC-WNCV-2.5
TC-WNCV-3.4
TC-WNCV-3.5
TC-WNCV-4.3

* Added auto generated files

* Restyled by whitespace

* Modified after rebase

* Auto generated files

Co-authored-by: Restyled.io <commits@restyled.io>

--- a/src/app/tests/suites/certification/PICS.yaml
+++ b/src/app/tests/suites/certification/PICS.yaml
@@ -180,6 +180,17 @@ PICS:
           "Does the device implement receiving the SetpointRaiseLower command?"
       id: CR_SetpointRaiseLower
 
+    - label:
+          "Does the device implement the UnoccupiedCoolingSetpoint attribute?"
+      id: A_UNOCCUPIEDCOOLINGSETPOINT
+
+    - label:
+          "Does the device implement the UnoccupiedHeatingSetpoint attribute?"
+      id: A_UNOCCUPIEDHEATINGSETPOINT
+
+    - label: "Does the device implement the MinSetpointDeadBand attribute?"
+      id: A_MINSETPOINTDEADBAND
+
       # Occupency sensing cluster
     - label: "Does the device implement the Occupancy attribute?"
       id: A_OCCUPANCY
@@ -310,6 +321,7 @@ PICS:
           "The optional key PI MAY provide additional information for pairing."
       id: PI_KEY
 
+    #Prompt
     - label: "Prompts user for input. Unable to run in CI"
       id: PICS_USER_PROMPT
 
@@ -318,3 +330,9 @@ PICS:
 
     - label: "Level Control for Lighting"
       id: OO_LT
+
+    #Flow measurement
+    - label:
+          "Can the MeasuredValue attribute changed by physical control at the
+          device?"
+      id: MANUAL_FLOW_CHANGE
