--- a/src/app/tests/suites/certification/Test_TC_SC_4_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_SC_4_2.yaml
@@ -84,8 +84,6 @@ tests:
     #validate the service type and the service domain not implemented in CI
 
     - label: "Check Hostname"
-      # On macOS the hostname is the device name and because of it this test is disabled for now.
-      disabled: true
       PICS: "(WIFI || ETH) && !THREAD"
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -99,9 +97,7 @@ tests:
                     isHexString: true
 
     - label: "Check Hostname"
-      # On macOS the hostname is the device name and because of it this test is disabled for now.
-      disabled: true
-      PICS: "(!WIFI && !ETH) && THREAD"
+      PICS: "PICS_SKIP_SAMPLE_APP && (!WIFI && !ETH) && THREAD"
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -140,8 +136,7 @@ tests:
                 value: vendorId
 
     - label: "Check Device Type ID (_T)"
-      disabled: true
-      PICS: DEVTYPE_SUBTYPE
+      PICS: PICS_SKIP_SAMPLE_APP && DEVTYPE_SUBTYPE
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByDeviceType"
       arguments:
@@ -201,8 +196,7 @@ tests:
                 value: 1
 
     - label: "Optional TXT key for device type (DT)"
-      disabled: true
-      PICS: DT_KEY
+      PICS: PICS_SKIP_SAMPLE_APP && DT_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -261,7 +255,6 @@ tests:
                 constraints:
                     minValue: 1
 
-    # The testplan needs TH needs to be Rebooted so below steps disabled for now
     - label: "Stop target device"
       cluster: "SystemCommands"
       command: "Stop"
@@ -276,8 +269,15 @@ tests:
               - name: "discriminator"
                 value: discriminator
 
+    - label: "Wait for the commissioned device to be retrieved"
+      cluster: "DelayCommands"
+      command: "WaitForCommissionee"
+      arguments:
+          values:
+              - name: "nodeId"
+                value: nodeId
+
     - label: "Open Commissioning Window"
-      disabled: true
       cluster: "AdministratorCommissioning"
       command: "OpenBasicCommissioningWindow"
       timedInteractionTimeoutMs: 10000
@@ -287,7 +287,6 @@ tests:
                 value: 180
 
     - label: "Check Instance Name"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -303,8 +302,6 @@ tests:
     #validate the service type and the service domain not implemented in CI
 
     - label: "Check Hostname"
-      # On macOS the hostname is the device name and because of it this test is disabled for now.
-      disabled: true
       PICS: "(WIFI || ETH) && !THREAD"
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -318,9 +315,7 @@ tests:
                     isHexString: true
 
     - label: "Check Hostname"
-      # On macOS the hostname is the device name and because of it this test is disabled for now.
-      disabled: true
-      PICS: "(!WIFI && !ETH) && THREAD"
+      PICS: "PICS_SKIP_SAMPLE_APP && (!WIFI && !ETH) && THREAD"
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -333,7 +328,6 @@ tests:
                     isHexString: true
 
     - label: "Check Long Discriminator _L"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByLongDiscriminator"
       arguments:
@@ -342,7 +336,6 @@ tests:
                 value: discriminator
 
     - label: "Check Short Discriminator (_S)"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByShortDiscriminator"
       arguments:
@@ -351,7 +344,6 @@ tests:
                 value: discriminator
 
     - label: "Check Vendor ID (_V)"
-      disabled: true
       PICS: VENDOR_SUBTYPE
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByVendorId"
@@ -361,9 +353,7 @@ tests:
                 value: vendorId
 
     - label: "Check Device Type ID (_T)"
-      # The device type is not broadcasted by the accessory under CI.
-      disabled: true
-      PICS: DEVTYPE_SUBTYPE
+      PICS: PICS_SKIP_SAMPLE_APP && DEVTYPE_SUBTYPE
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByDeviceType"
       arguments:
@@ -372,13 +362,11 @@ tests:
                 value: deviceType
 
     - label: "Check Commissioning Mode (_CM)"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByCommissioningMode"
 
     - label: "TXT key for Vendor ID and Product ID (VP)"
       PICS: VP_KEY
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -388,7 +376,6 @@ tests:
 
     - label: "TXT key for Vendor ID and Product ID (VP)"
       PICS: VP_KEY
-      disabled: true
       optional: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -398,7 +385,6 @@ tests:
                 value: productId
 
     - label: "Optional TXT key for MRP Retry Interval Idle (CRI)"
-      disabled: true
       PICS: CRI_COMM_DISCOVERY_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -409,7 +395,6 @@ tests:
                     maxValue: 3600000
 
     - label: "Optional TXT key for MRP Retry Interval Active (CRA)"
-      disabled: true
       PICS: CRA_COMM_DISCOVERY_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -420,7 +405,6 @@ tests:
                     maxValue: 3600000
 
     - label: "TXT key for commissioning mode (CM)"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -429,8 +413,7 @@ tests:
                 value: 1
 
     - label: "Optional TXT key for device type (DT)"
-      disabled: true
-      PICS: DT_KEY
+      PICS: PICS_SKIP_SAMPLE_APP && DT_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -438,10 +421,9 @@ tests:
               - name: "deviceType"
                 value: deviceType
                 constraints:
-                    maxValue: 49151
+                    maxValue: 999
 
     - label: "Optional TXT key for device name (DN)"
-      disabled: true
       PICS: DN_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -452,7 +434,6 @@ tests:
                     maxLength: 32
 
     - label: "Optional TXT key for rotating device identifier (RI)"
-      disabled: true
       PICS: RI_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -463,7 +444,6 @@ tests:
                     maxValue: 100
 
     - label: "Optional TXT key for pairing hint (PH)"
-      disabled: true
       PICS: PH_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -474,7 +454,6 @@ tests:
                     notValue: 0
 
     - label: "Optional TXT key for pairing instructions (PI)"
-      disabled: true
       PICS: PI_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -485,7 +464,6 @@ tests:
                     maxLength: 128
 
     - label: "Check IPs"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
