--- a/examples/chef/cimanifest.json
+++ b/examples/chef/cimanifest.json
@@ -1,4 +1,4 @@
 {
     "lighting-app": "81a1262e611fab1a71ac4129b91cec0f",
-    "zap_commit": "6594a9257ce96ee6d852eed052939849b31259fc"
+    "zap_commit": "TEMP DISABLED"
 }
