Add an open-commissioning-window command to darwin-framework-tool.
This way we can open ECM windows and know what the pairing code is.

Fixes https://github.com/project-chip/connectedhomeip/issues/18916

--- a/examples/darwin-framework-tool/BUILD.gn
+++ b/examples/darwin-framework-tool/BUILD.gn
@@ -46,6 +46,8 @@ executable("darwin-framework-tool") {
     "commands/common/CHIPCommandStorageDelegate.mm",
     "commands/common/CHIPToolKeypair.mm",
     "commands/pairing/Commands.h",
+    "commands/pairing/OpenCommissioningWindowCommand.h",
+    "commands/pairing/OpenCommissioningWindowCommand.mm",
     "commands/pairing/PairingCommandBridge.mm",
     "commands/pairing/PairingDelegateBridge.mm",
     "commands/storage/Commands.h",
